--- a/src/styles/articleCard.css
+++ b/src/styles/articleCard.css
@@ -4,7 +4,23 @@
     border-radius: 10px;
     margin-bottom: 20px;
     overflow: hidden;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
 }
-.article_card_image {
+.card_image {
     width: 100%;
+}
+.card_title {
+    margin: 10px;
+    font-size: 16px;
+}
+.card_author {
+    margin: 0 10px 10px;
+    font-size: 12px;
+    font-weight: bold;
+}
+.card_description {
+    margin: 0 10px 10px;
+    font-size: 12px;
 }
