Added sort logic

--- a/src/styles/router.css
+++ b/src/styles/router.css
@@ -1,17 +1,9 @@
 body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+.app_container {
     max-width: 1200px;
     margin: 0 auto;
-    font-family: Arial, Helvetica, sans-serif;
-}
-header {
-    margin: 20px 0;
-}
-.nav_link {
-    font-size: 24px;
-    color: black;
-    margin: 0 10px 0 0;
-    text-decoration: none;
-}
-.active_link {
-    border-bottom: 2px solid black;
 }
